fix overflow profile picture

--- a/src/app/components/credits/contributor/contributor.component.scss
+++ b/src/app/components/credits/contributor/contributor.component.scss
@@ -70,6 +70,14 @@
   max-width: 400px;
   text-align: center;
   position: relative;
+
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 8px;
+  }
 }
 
 .modal-content .close {
